--- a/views/index.html
+++ b/views/index.html
@@ -30,9 +30,31 @@ Jadikan halaman website ini tempat melihat dan menyebarkan momen.">
 Jadikan halaman website ini tempat melihat dan menyebarkan momen.">
 
 
-    </head>
+    <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    html, body {
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+      font-family: sans-serif;
+    }
+
+    iframe {
+      border: none;
+      width: 100%;
+      height: 100%;
+    }
+    </style>
+
+</head>
 <body>
    <iframe src="https://informal-reassurance-426910.framer.app/" allowfullscreen loading="lazy" title="OSIS Gridaku"></iframe>
 </body>
 </html>
+
 
